--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "src/shared/infra/http/server.ts",
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
     "dev": "tsnd -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn .",
     "typeorm": "tsnd -r tsconfig-paths/register ./node_modules/typeorm/cli",
     "test": "jest",
@@ -12,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "csv-parse": "^5.0.4",
+    "dayjs": "^1.11.4",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
