--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "dayjs": "^1.11.4",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.8",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.2.4",
     "swagger-ui-express": "^4.3.0",
     "tsyringe": "^4.6.0",
     "typeorm": "0.2.45",
-    "supertest": "^6.2.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.11.10",
+    "@types/nodemailer": "^6.4.5",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
