feat: add tests the reset password

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
+
 FORGOT_MAIL_URL=http://localhost:3333/password/reset?token=
+
+# SMTP
+MAIL_HOST="smtp.mailtrap.io"
+MAIL_PORT=2525,
+MAIL_AUTH_USER=9a07f4f9a52827
+MAIL_AUTH_PASS=292030a85eb173
