--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jest": "^28.0.3",
     "prettier": "^2.5.1",
     "regenerator-runtime": "^0.13.9",
+    "ts-jest": "^28.0.8",
     "ts-node": "10.4.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^4.0.0",
