--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -59,7 +59,7 @@
         ],
         "import/no-extraneous-dependencies": [
             "error",
-            { "devDependencies": ["**/*.spec.js"] }
+            { "devDependencies": ["**/*.spec.ts"] }
         ],
         "prettier/prettier": "error" //["error", {"singleQuote": true }]
     },
