--- a/package.json
+++ b/package.json
@@ -29,13 +29,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.2.174",
-    "@swc/helpers": "^0.3.13",
-    "@swc/jest": "^0.2.20",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^28.1.3",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.11.10",
@@ -52,11 +48,10 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^28.0.3",
+    "jest": "28.1.3",
     "prettier": "^2.5.1",
     "regenerator-runtime": "^0.13.9",
     "ts-jest": "^28.0.8",
-    "ts-node": "10.4.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^4.0.0",
     "typescript": "4.5.2"
